# ros2_quadcopter_sqp_controller

./: .gitignore  README.md  install_acados.sh  package.xml  requirements.txt  setup.cfg  setup.py
config/: x500.yaml  x500_mavros.yaml
launch/: launch_moving_target.py  launch_mpc.py  launch_path_publisher.py  launch_pid.py
quadrotor_acados/: math_utils.py  moving_target_publisher.py  mpc_controller.py  path_publisher.py  quadrotor_model.py  ros1_mavros_mpc_node.py  ros2_px4_motor_sequence_node.py  ros2_px4_mpc_node.py  ros2_px4_pid_node.py  single_point_path_publisher.py
resource/: quadrotor_acados
utils/: analyze_target_tracking_log.py  analyze_tracking_log.py  path_generators.py
