<?xml version="1.0"?>
<package format="3">
  <name>quadrotor_acados</name>
  <version>0.1.0</version>
  <description>ROS 2 PX4 MPC bridge subscribing to Path and VehicleOdometry and publishing ActuatorMotors.</description>
  <maintainer email="maintainer@example.com">quadrotor_acados</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- casadi/acados have no standard rosdep keys here; install via pip/source -->
  <exec_depend>python3-pip</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
